# semantic-trace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  test-judge.jsonl
.github/workflows/: ci.yml  publish.yml
examples/: demo.jsonl  drift_detection_demo.py  minimal_demo.py
src/agent_trace/: __init__.py  cli.py
src/agent_trace/core/: __init__.py  schema.py  serializer.py
src/agent_trace/engine/: __init__.py  invariants.py  replay.py
src/agent_trace/integrations/: __init__.py  langgraph.py
src/semantic_trace/: __init__.py  cli.py
src/semantic_trace/core/: __init__.py  schema.py  serializer.py
src/semantic_trace/engine/: __init__.py  invariants.py  replay.py
src/semantic_trace/integrations/: __init__.py  langgraph.py
tests/: test_cli.py  test_invariants.py  test_replay.py  test_schema.py  test_serializer.py  test_trace.py
traces/: research-run-fail.jsonl  research-run.jsonl
